@@ -108,6 +108,9 @@ document.write("Last Published: " + document.lastModified);
 <div class="menupagetitle">Overview</div>
 </div>
 <div class="menuitem">
+<a href="api/overview-summary.html#overview_description">Getting Started</a>
+</div>
+<div class="menuitem">
 <a href="api/index.html">API Docs</a>
 </div>
 <div class="menuitem">
@@ -151,6 +154,10 @@ document.write("Last Published: " + document.lastModified);
     </p>
     
 <ul>
+      
+<li>
+<a href="api/overview-summary.html#overview_description">Getting Started</a>
+</li>
       
 <li>
 <a href="api/index.html">API Docs</a>
