@@ -60,6 +60,7 @@ Unreleased
                point at the FAQ
    HBASE-497   RegionServer needs to recover if datanode goes down
    HBASE-530   Upgrade hadoop to 0.16.1 in 0.1 branch
+   HBASE-456   Clearly state which ports need to be opened in order to run HBase
               
 Release 0.16.0
 
